# AdvancedRayTracing

./: .gitignore  .gitmodules  BoundingBox.cpp  BoundingBox.h  BoundingVolume.cpp  BoundingVolume.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  ColorCalculation.cpp  ColorCalculation.h  HitInfo.cpp  HitInfo.h  IBL_PostProcess.cpp  Image.cpp  Image.h  ImagePlane.cpp  ImagePlane.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PerlinNoise.cpp  PerlinNoise.hpp  README.md  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Texture.cpp  (+8 more)
IBL/: CMakeLists.txt  IBL_PostProcess.cpp
Lights/: AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.h  PointLight.h  SpotLight.h
Materials/: BRDF.cpp  BRDF.hpp  BlinnPhongBRDF.cpp  BlinnPhongBRDF.hpp  BlinnPhongBRDF_Mdf.cpp  BlinnPhongBRDF_Mdf.hpp  ClassicMaterial.cpp  ClassicMaterial.hpp  Glass.cpp  Glass.hpp  LightMaterial.hpp  LightSource.cpp  LightSource.h  Materialx.cpp  Materialx.hpp  Mirror.cpp  Mirror.hpp  PhongBRDF.cpp  PhongBRDF.hpp  PhongBRDF_Mdf.cpp  PhongBRDF_Mdf.hpp  TorranceSparrow.cpp  TorranceSparrow.hpp
Shapes/: Mesh.cpp  Mesh.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
hw1_inputs/: bunny.xml  simple_shading.xml
hw2_inputs/: bunny.xml  horse_instanced.xml  simple_transform.xml
hw3_inputs/: horse.xml  spheres_transform.xml
hw4_inputs/: glass_plates.xml
inputs/: bunny.xml  simple.xml
inputs/10/: ibl_goksu.xml  skybox.xml  untitled.xml
inputs/2/: bunny_flat.xml  simple_transform.xml
inputs/3/: bunny_smooth.xml
inputs/4/: cornellbox_glass.xml  glass_plates.xml  horse_and_glass_mug.xml
inputs/5/: glass_plates_area.xml  glass_plates_point.xml  metal_plates_area.xml  spheres_dof.xml  untitled.xml
inputs/6/: ellipsoids_texture.xml  perlin_types.xml  simple_texture.xml  skybox.xml  sphere_texture_blend_bilinear.xml  sphere_texture_replace_bilinear.xml  sphere_texture_replace_nearest.xml
inputs/7/: bump_mapping_basic.xml  bump_mapping_transformed.xml  sphere_bump_nobump.xml
inputs/8/: brdf_blinnphong_modified.xml  brdf_blinnphong_modified_normalized.xml  brdf_blinnphong_original.xml  brdf_phong_modified.xml  brdf_phong_modified_normalized.xml  brdf_phong_original.xml  brdf_torrancesparrow.xml
inputs/9/: cornellbox_ldr.xml
